<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/fruit_2"
    tools:context=".UserLogin">

    <AutoCompleteTextView
        android:id="@+id/eMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/colorAccent"
        android:hint="@string/prompt_email"
        android:completionThreshold="1"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:textColor="@color/black"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="5dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/log"
        android:text="@string/login"
        android:layout_marginTop="15dp"
        />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:id="@+id/NOT_A_MEMBER"
            android:textColor="@color/black"
            android:text="@string/Not_a_MeMber"
            />

</LinearLayout>